<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/show_image"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/information_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/information_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttons_layout"
        app:layout_constraintStart_toEndOf="@id/item_image"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/item_text_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_of_music"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration" />

        <TextView
            android:id="@+id/item_text_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center|right"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/information_layout"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded">

        <ImageButton
            android:id="@+id/button_to_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/to_artist"
            android:src="@drawable/artists"
            android:text="@string/button" />

        <ImageButton
            android:id="@+id/button_add_to_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/to_playlist"
            android:src="@drawable/music_add"
            android:text="@string/button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>